--- a/src/graphics/reader/reader.graphic.html
+++ b/src/graphics/reader/reader.graphic.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script>
+    function dark() {
+        var isDark = localStorage.getItem("dark_mode");
+        if (isDark === undefined) isDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+        else isDark = isDark === "dark";
+        document.documentElement.setAttribute('data-bs-theme', isDark ? "dark" : "light");
+    }
+    dark();
+</script>
+
 <head>
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
