--- a/src/graphics/reader/reader.graphic.html
+++ b/src/graphics/reader/reader.graphic.html
@@ -12,7 +12,8 @@
 </script>
 
 <head>
-	<meta charset="UTF-8" />
+    <meta charset="UTF-8" />
+    <title>Tiltify Donation Reader</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +21,8 @@
 </head>
 
 <body>
-	<div id="root"></div>
-	<script type="module" src="./reader.graphic.tsx"></script>
+    <div id="root"></div>
+    <script type="module" src="./reader.graphic.tsx"></script>
 </body>
 
 </html>
