--- a/src/graphics/bar/bar.graphic.html
+++ b/src/graphics/bar/bar.graphic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-	<div id="root" style="width: 100vw; height: 100vh; font-size: 5rem"></div>
-	<script type="module" src="./reader.graphic.tsx"></script>
+    <div id="root" style="width: 100vw; height: 100vh; font-size: 5rem"></div>
+    <script type="module" src="./bar.graphic.tsx"></script>
 </body>
 
 </html>
