--- a/src/graphics/bar/bar.graphic.html
+++ b/src/graphics/bar/bar.graphic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="root" style="width: 100vw; height: 100vh; font-size: 5rem"></div>
+    <div id="root" style="width: 100vw; height: 100vh"></div>
     <script type="module" src="./bar.graphic.tsx"></script>
 </body>
 
