Start pool system

--- a/src/dashboard/announcements/announcements.dashboard.html
+++ b/src/dashboard/announcements/announcements.dashboard.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div id="root"></div>
-	<script type="module" src="./panel.dashboard.tsx"></script>
+	<script type="module" src="./announcements.dashboard.tsx"></script>
 </body>
 
 </html>
