--- a/src/dashboard/ticker-control/tickercontrol.dashboard.html
+++ b/src/dashboard/ticker-control/tickercontrol.dashboard.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div id="root"></div>
-	<script type="module" src="./announcements.dashboard.tsx"></script>
+	<script type="module" src="./tickercontrol.dashboard.tsx"></script>
 </body>
 
 </html>
