--- a/src/dashboard/people-control/people.dashboard.html
+++ b/src/dashboard/people-control/people.dashboard.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div id="root"></div>
+	<div id="root" style="min-height: 400px;"></div>
 	<script type="module" src="./people.dashboard.tsx"></script>
 </body>
 
