--- a/src/dashboard/xr18-control/mute.dashboard.html
+++ b/src/dashboard/xr18-control/mute.dashboard.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" href="../../../../wasd-common/shared/uwcs-bootstrap.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
