Create html files for each scene layout

--- a/src/graphics/overlay/RUN-RACE.html
+++ b/src/graphics/overlay/RUN-RACE.html
@@ -9,6 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Mulish:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
+<script>
+    const defaultScene = "RUN-RACE";
+</script>
+
 <body>
     <div id="root" style="width: 100vw; height: 100vh"></div>
     <script type="module" src="./overlay.graphic.tsx"></script>
