--- a/src/graphics/overlay/RUN-RACE.html
+++ b/src/graphics/overlay/RUN-RACE.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="root" style="width: 100vw; height: 100vh"></div>
-    <script type="module" src="./overlay.graphic.tsx"></script>
+    <script type="module" src="./race12.graphic.tsx"></script>
 </body>
 
 </html>
