--- a/src/obs/dashboard/obs-control/obscontrol.dashboard.html
+++ b/src/obs/dashboard/obs-control/obscontrol.dashboard.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<link rel="stylesheet" href="../../../common/uwcs-bootstrap.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>OBS</title>
 </head>
 
 <body>
