--- a/src/wasd/graphics/overlay/RUN-RACE.html
+++ b/src/wasd/graphics/overlay/RUN-RACE.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>RUN-RACE</title>
 </head>
 
 <script>
