--- a/src/wasd/graphics/comms/COMMS-RACE.html
+++ b/src/wasd/graphics/comms/COMMS-RACE.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>COMMS</title>
+    <title>COMMS-RACE</title>
 </head>
 
 <script>
-    const defaultScene = "COMMS";
+    const defaultScene = "COMMS-RACE";
 </script>
 
 <body>
     <div id="root" style="width: 100vw; height: 100vh"></div>
-    <script type="module" src="./comms.graphic.tsx"></script>
+    <script type="module" src="./commsrace.graphic.tsx"></script>
 </body>
 
 </html>
