Add externally accessible mute & donos page

--- a/src/external/shared/donos.html
+++ b/src/external/shared/donos.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MUTE EXT</title>
+	<title>DONOS EXT</title>
 </head>
 
 <body>
 	<div id="root"></div>
-	<script type="module" src="../../mixer/dashboard/mute/mute.dashboard.tsx"></script>
+	<script type="module" src="../../donos/dashboard/reader/reader.graphic.tsx"></script>
 </body>
 
 </html>
