--- a/src/wasd/graphics/overlay/RUN-BACKUP.html
+++ b/src/wasd/graphics/overlay/RUN-BACKUP.html
@@ -13,7 +13,8 @@
 
 <body>
     <div id="root" style="width: 100vw; height: 100vh"></div>
-    <script type="module" src="./overlay.graphic.tsx"></script>
+    <!-- <script type="module" src="./overlay.graphic.tsx"></script> -->
+    <script type="module" src="./race12.graphic.tsx"></script>
 </body>
 
 </html>
