--- a/src/dev/dashboard/dev.dashboard.html
+++ b/src/dev/dashboard/dev.dashboard.html
@@ -11,6 +11,14 @@
 			color: white !important;
 		}
 
+		.cm-theme-dark {
+			width: 100%;
+		}
+
+		.cm-editor {
+			height: 400px;
+		}
+
 		.container-lg {
 			position: fixed;
 			inset: 0;
