--- a/src/loupedeck/dashboard/loupedeck.dashboard.html
+++ b/src/loupedeck/dashboard/loupedeck.dashboard.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Loupedeck</title>
+    <style>
+        .loupedeck-button:active {
+            filter: grayscale() brightness(500)
+        }
+    </style>
 </head>
 
 <body>
